tests/baselines/reference/module_augmentExistingVariable.errors.txt
module_augmentExistingVariable.ts(1,5): error TS2300: Duplicate identifier 'console'.
module_augmentExistingVariable.ts(3,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
module_augmentExistingVariable.ts(3,8): error TS2300: Duplicate identifier 'console'.


==== module_augmentExistingVariable.ts (3 errors) ====
    var console: any;
        ~~~~~~~
!!! error TS2300: Duplicate identifier 'console'.
    
    module console {
           ~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
           ~~~~~~~
!!! error TS2300: Duplicate identifier 'console'.
        export var x = 2;
    }